--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <a href=""><img src="./images/Vector.svg" alt="vector"></a>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Service</a></li>
-                <li><a href="">Menu</a></li>
-                <li><a href="">Contact</a></li>
+        <div class="header-wrap container">
+        <a class="logo" href=""><img src="./images/Vector.svg" alt="vector"></a>
+        <nav class="header-nav">
+            <ul class="nav-list">
+                <li><a class="nav-link" href="">Home</a></li>
+                <li><a class="nav-link" href="">About</a></li>
+                <li><a class="nav-link" href="">Service</a></li>
+                <li><a class="nav-link" href="">Menu</a></li>
+                <li><a class="nav-link" href="">Contact</a></li>
             </ul>
         </nav>
         <button type="button">Order Now</button>
+        </div>
     </header>
     
     <main>
